--- a/src/main/webapp/login.template.client.html
+++ b/src/main/webapp/login.template.client.html
@@ -7,9 +7,9 @@ Username</label>
 </div>
 
 <div>
-  <label for="passwordFld">
+  <label f>
   Password</label>
-  <input type="password" id="passwordFld" placeholder="password">
+  <input type="password" placeholder="password">
 </div>
 
 <button type="button" id="loginBtn">Login</button>
