--- a/src/main/webapp/register.template.client.html
+++ b/src/main/webapp/register.template.client.html
@@ -18,7 +18,7 @@
 
     <td><input id="usernameFld" class="form-control" placeholder="Username" type="text" /></td>
 
-    <td><input id="passwordFld" class="form-control" placeholder="Password" type="password" /></td>
+    <td><input class="form-control" placeholder="Password" type="password" /></td>
 
     <td><input id="firstNameFld" class="form-control" placeholder="First Name" type="text" /></td>
 
