added folders login, registration, as well as jquery stuff

--- a/src/main/webapp/jquery/register/register.template.client.html
+++ b/src/main/webapp/jquery/register/register.template.client.html
@@ -18,7 +18,7 @@
 
     <td><input id="usernameFld" class="form-control" placeholder="Username" type="text" /></td>
 
-    <td><input class="form-control" placeholder="Password" type="password" /></td>
+    <td><input id="passwordFld" class="form-control" placeholder="Password" type="password" /></td>
 
     <td><input id="firstNameFld" class="form-control" placeholder="First Name" type="text" /></td>
 
@@ -27,14 +27,6 @@
 
     <td><input id="email" class="form-control"
     placeholder="last-name.first-initial@husky.neu.edu" type="email"/></td>
-
-    <td>
-      <select>
-  <option value="student">Student</option>
-  <option value="faculty">Faculty</option>
-  <option value="admin">Admin</option>
-</select>
-</td>
     <td>
       <button type="addpersonbtn">Add Person</button>
     </td>
