--- a/src/main/webapp/jquery/register/register.template.client.html
+++ b/src/main/webapp/jquery/register/register.template.client.html
@@ -28,8 +28,8 @@
     <td><input id="email" class="form-control"
     placeholder="last-name.first-initial@husky.neu.edu" type="email"/></td>
     <td>
-      <button type="addpersonbtn">Add Person</button>
+      <button>Add Person</button>
     </td>
   </tr>
 </table>
-<a href="login.template.client.html">Login</a>
+<a href="../components/login/login.template.client.html">Login</a>
